@@ -1,5 +1,6 @@
 Sep 12, 2025
   hpo-phenotype: updated obophenotype ontology to 2025-09-01 release
+  improved handling of obsolete annotations
 
 May 12, 2025
   hpo-phenotype: updated obophenotype ontology to 2025-05-06 release
